image for webpage character

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
         <h1>The art of Meditation</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magnam nisi atque harum odit possimus cum quis voluptas, nesciunt alias accusamus repellat numquam distinctio aspernatur incidunt, rem iure nam et.</p>
             <button class ="btns">Get started</button>
-            <button class="btns">Learn More</button>
+            <button class="btns" onclick="">Learn More</button>
+
     </div>
     <div>
-        <img src ="/home/elyees/Pictures/circle.jpeg">
+        <img src ="circle.jpg.png">
     </div>
     </main>
 
