introduction of url links

--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="nav-logo">Zen</a>
+        <a href="index.html" class="nav-logo">super spork</a>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
         </ul>
     </nav>
     <main>
         <div class="content"></div>
         <h1>The art of Meditation</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magnam nisi atque harum odit possimus cum quis voluptas, nesciunt alias accusamus repellat numquam distinctio aspernatur incidunt, rem iure nam et.</p>
+        <p>Normally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
+            try out super-spork. 
+            Just For You
+        </p>
             <button class ="btns">Get started</button>
-            <button class="btns" onclick="">Learn More</button>
+            <button class="btns" onclick="#AnimationEffect">Learn More</button>
 
     </div>
     <div>
