refining my css

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,5 +13,15 @@
 <body>
   <nav class="navbar">
     <a href="index.html" class="nav-logo">My Contact</a>
+    <main>
+      <div>
+        <div class="resume">
+          <p><code>My resume</code> has been used to make it so that when the scroll boundaries of the yellow inner box are reached, the whole page does not begin to scroll.</p>
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+        </div>
+      </div>
+    </main>
 </body>
 </html>
