redefining page structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.2">
     <title>simple landing page</title>
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,20 @@
         </p>
             <button class ="btns">Get started</button>
             <button class="btns" onclick="#AnimationEffect">Learn More</button>
-
+            <div>
+            <div class="Content"></div>
+            <p>Normally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
+                try out super-spork. 
+                Just For You
+                Normally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
+                try out super-spork. 
+                Just For YouNormally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
+                try out super-spork. 
+                Just For YouNormally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
+                try out super-spork. 
+                Just For You
+            </p>
+            </div>
     </div>
     <div>
         <img src ="circle.jpg.png">
