final css and html edit

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.2">
-    <title>simple landing page</title>
+    <title>ely-portfolio landing page</title>
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,200&display=swap" rel="stylesheet"> 
+<span class="material-icons-outlined">
+    settings
+    </span>
 </head>
 <body>
     <nav class="navbar">
@@ -16,34 +19,25 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="#">My portfolio</a></li>
             <li><a href="contact/index.html">Contact</a></li>
+           <li><span class="material-icons-outlined">
+                settings
+                </span></li>
         </ul>
     </nav>
     <main>
         <div class="content"></div>
-        <h1>The art of Meditation</h1>
-        <p>Normally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
-            try out super-spork. 
-            Just For You
-        </p>
+        <h1>About Myself</h1>
+        <p>This detailed landing page describes that I'm a current student at Moringa School, with no active job experience in software development. I have always been facinated with coding and the way code can be manipulated. It's been a lifelong dream to actually wake up and be fluently versed in code. I enjoy biking, I love spending time with my friends, I am skilled in boxing and I am a huge fan of spanish music. I love animal and interacting with people. I was taught the importance of social economics by my mom. I still implement her lessons today. I became passionate abot coding when i was very young. I wrote my first RAT virus when I was 15. I studied my primary in a remote county caled Kirinyaga, so you wouldn't expect the school to be diverse in tech-related studies. But that wasn't the case. I really disliked my computer teacher so I decided to create a virus that prompted the user for a set of values and text. I was the only one who knew the password and I have to say that it was fun to mess with my teacher.
+        My passion never faded since most of the things I know are self-taught. I enjoy biking, I love spending time with my friends, I am skilled in boxing and I am a huge fan of spanish music. I love animal and interacting with people. I was taught the importance of social economics by my mom. I still implement her lessons today. I became passionate abot coding when i was very young. I wrote my first RAT virus when I was 15. I studied my primary in a remote county caled Kirinyaga, so you wouldn't expect the school to be diverse in tech-related studies. But that wasn't the case. I really disliked my computer teacher so I decided to create a virus that prompted the user for a set of values and text. I was the only one who knew the password and I have to say that it was fun to mess with my teacher.
+                My passion never faded since most of the things I know are self-taught.
+            </p>
+         </br>
+    
             <button class ="btns">Get started</button>
             <button class="btns" onclick="#AnimationEffect">Learn More</button>
-            <div>
-            <div class="Content"></div>
-            <p>Normally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
-                try out super-spork. 
-                Just For You
-                Normally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
-                try out super-spork. 
-                Just For YouNormally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
-                try out super-spork. 
-                Just For YouNormally sporting activities have been made tedious and examplified. Scientists and gym fanatics have joined forces to create a remarkable routine for anyone at any time to stay healthy and in love with their own being.
-                try out super-spork. 
-                Just For You
-            </p>
-            </div>
-    </div>
+            
     <div>
         <img src ="circle.jpg.png">
     </div>
