changes to link

--- a/index (2).html
+++ b/index (2).html
@@ -1,27 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My contact</title>
+  <title>
+    <link href="index.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">"
-  <link rel="style.css" hreflang="eng" href="stylesheet">
-</head>
 <body>
   <nav class="navbar">
-    <a href="index.html" class="nav-logo">My Contact</a>
+    <a href="index.css" class="nav-logo">My Contact</a>
     <main>
       <div>
         <div class="resume">
-          <p><code>My resume</code> has been used to make it so that when the scroll boundaries of the yellow inner box are reached, the whole page does not begin to scroll.</p>
+          <img src="">
+          
           <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+<div class="menu">
+  <ul>
+    <li>
+
+       <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+       <li><a href="#">Pages</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Blog</a></li>
+       <li><a href="#">Shop</a></li>
+<div>
+  <p>
+  <b>
+    <em>
+      This is my first official website
+    </em>
+  </b>
+  </p>
+</div>
+
+</b>
+        </link>
+  </ul>
+</div>
         </div>
       </div>
     </main>
 </body>
+</header>
 </html>
