--- a/index.html
+++ b/index.html
@@ -15,22 +15,44 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="nav-logo">super spork</a>
+        <a href="index (2).html" class="nav-logo">super-spork</a>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">My portfolio</a></li>
-            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="#">Contact</a></li>
            <li><span class="material-icons-outlined">
                 settings
                 </span></li>
         </ul>
     </nav>
     <main>
+                  
+    <div>
+        <img src ="circle.jpg.png">
+    </div>
+    <div>
+        <img src="ely.jpg.jpeg" alt="My profile">
+    </div>
+    <body>
+    <div>
+        <p>
+            <section>
+                <strong>
+                    <q>
+                        <caption>
+                            Below the surface of the machine, the program moves. Without effort, it expands and contracts. In great harmony, electrons scatter and regroup. The forms on the monitor are but ripples on the water. The essence stays invisibly below.<br>Master Yuan-Ma, The Book of Programming
+                        </caption>
+                    </q>
+                </strong>
+            </section>
+        </p>
+    </div>
+    </body>
         <div class="content"></div>
         <h1>About Myself</h1>
-        <p>This detailed landing page describes that I'm a current student at Moringa School, with no active job experience in software development. I have always been facinated with coding and the way code can be manipulated. It's been a lifelong dream to actually wake up and be fluently versed in code. I enjoy biking, I love spending time with my friends, I am skilled in boxing and I am a huge fan of spanish music. I love animal and interacting with people. I was taught the importance of social economics by my mom. I still implement her lessons today. I became passionate abot coding when i was very young. I wrote my first RAT virus when I was 15. I studied my primary in a remote county caled Kirinyaga, so you wouldn't expect the school to be diverse in tech-related studies. But that wasn't the case. I really disliked my computer teacher so I decided to create a virus that prompted the user for a set of values and text. I was the only one who knew the password and I have to say that it was fun to mess with my teacher.
-        My passion never faded since most of the things I know are self-taught. I enjoy biking, I love spending time with my friends, I am skilled in boxing and I am a huge fan of spanish music. I love animal and interacting with people. I was taught the importance of social economics by my mom. I still implement her lessons today. I became passionate abot coding when i was very young. I wrote my first RAT virus when I was 15. I studied my primary in a remote county caled Kirinyaga, so you wouldn't expect the school to be diverse in tech-related studies. But that wasn't the case. I really disliked my computer teacher so I decided to create a virus that prompted the user for a set of values and text. I was the only one who knew the password and I have to say that it was fun to mess with my teacher.
+        <p>This detailed landing page describes that I'm a current student at Moringa School, with no active job experience in software development. I have always been fascinated with coding and the way code can be manipulated. It's been a lifelong dream to actually wake up and be fluently versed in code. I enjoy biking, I love spending time with my friends, I am skilled in boxing and I am a huge fan of spanish music. I love animal and interacting with people. I was taught the importance of social economics by my mom. I still implement her lessons today. <br> I became passionate about coding when i was very young. I wrote my first RAT virus when I was 15. I studied my primary in a remote county called Kirinyaga, so you wouldn't expect the school to be diverse in tech-related studies. But that wasn't the case. I really disliked my computer teacher so I decided to create a virus that prompted the user for a set of values and text. I was the only one who knew the password and I have to say that it was fun to mess with my teacher.<br>
+        My passion never faded since most of the things I know are self-taught. I enjoy biking, I love spending time with my friends, I am skilled in boxing and I am a huge fan of spanish music. I love animal and interacting with people. I was taught the importance of social economics by my mom. <br>I still implement her lessons today. I became passionate about coding when i was very young. I wrote my first RAT virus when I was 15. I studied my primary in a remote county called Kirinyaga, so you wouldn't expect the school to be diverse in tech-related studies. But that wasn't the case. I really disliked my computer teacher so I decided to create a virus that prompted the user for a set of values and text. I was the only one who knew the password and I have to say that it was fun to mess with my teacher.
                 My passion never faded since most of the things I know are self-taught.
             </p>
          </br>
@@ -38,9 +60,6 @@
             <button class ="btns">Get started</button>
             <button class="btns" onclick="#AnimationEffect">Learn More</button>
             
-    <div>
-        <img src ="circle.jpg.png">
-    </div>
     </main>
 
     </body>
